--- a/part2/看板娘.md
+++ b/part2/看板娘.md
@@ -1,11 +1,22 @@
 # 看板娘的世界
 
-![pic](../pic/1.png)
+![pic](../part1/pic/1.png)
 
 #### 看板娘参考资料
 https://juejin.cn/post/6844904032423641096
 
 https://github.com/stevenjoezhang/live2d-widget
 
+https://www.cnblogs.com/wangsr-suc/p/13645313.html
+https://blog.csdn.net/Jioho_chen/article/details/89419170
+http://www.zuidaima.com/blog/4552783354924032.htm
+https://www.cnblogs.com/mxiaoli/p/11413119.html
+
 hexo史上最全搭建教程
 https://blog.csdn.net/sinat_37781304/article/details/82729029
+
+JS浏览器事件
+https://blog.csdn.net/u012352278/article/details/106467308
+
+Hexo + GitHub (Coding) Pages 搭建博客
+https://github.com/HarleyWang93/blog/issues/1
