--- a/personal/一些待处理的资料.md
+++ b/personal/一些待处理的资料.md
@@ -74,3 +74,6 @@ wangbaoqiang
 wangyuanyuan
 zibenwane
 zibenzhuyi
+
+
+Access to XMLHttpRequest at 'http://localhost:8088/findUserName' from origin 'http://localhost:3001' has been blocked by CORS policy: Response to preflight request doesn't pass access control check: No 'Access-Control-Allow-Origin' header is present on the requested resource.
