--- a/part1/2.md
+++ b/part1/2.md
@@ -164,3 +164,39 @@ Error in mounted hook: “TypeError: Cannot read property ‘init‘ of undefine
 https://blog.csdn.net/weixin_46370867/article/details/113811527
 
 花开并蒂，桑结连理；鼓乐鸣齐，红烛映喜。共结百年秦晋义，同作世间好夫妻。恭祝贤伉俪，新婚甜如蜜；祝福送给你，鸳鸯永比翼。祝：新婚快乐！
+
+参考资料
+
+webpack4.x配置vue开发/生产环境
+https://www.jianshu.com/p/87b48e29773c  
+
+TextLabel——数据标注系统
+https://blog.csdn.net/one_a_xiaobai/article/details/115716790
+
+自然语言处理文本标注工具——Doccano介绍
+https://www.pianshen.com/article/3880864039/
+
+开源的文本标注工具
+https://blog.csdn.net/u014033218/article/details/101426432
+
+构想：中文文本标注工具（内附多个开源文本标注工具）
+https://blog.csdn.net/c9Yv2cf9I06K2A9E/article/details/78560121
+
+实用的vue插件大汇总
+https://www.cnblogs.com/aidixie/p/10026590.html
+
+Vue使用echarts-wordcloud生成词云
+
+https://blog.csdn.net/a787373009/article/details/102615282
+
+vue实现多标签保持页面管理系统
+https://blog.csdn.net/sunshouyan/article/details/107020260
+
+vue实现标签云效果
+https://www.cnblogs.com/imgss/p/tagcloud.html
+
+讲解开源项目：功能强大的 JS 文件上传库
+https://www.cnblogs.com/xueweihan/p/11399630.html
+
+开源一个基于SpringBoot的文档上传、转换、预览项目
+https://blog.csdn.net/zhulin2012/article/details/108633589
