--- a/part1/待处理.md
+++ b/part1/待处理.md
@@ -1,4 +1,4 @@
-# 第二节
+# 第二节 待处理
 
 To https://gitee.com/xiaochao12/mygitbook.git
  ! [rejected]        master -> master (non-fast-forward)
@@ -9,7 +9,7 @@ hint: 'git pull ...') before pushing again.
 hint: See the 'Note about fast-forwards' in 'git push --help' for details.
 
 
-李德瑶 <598435803@qq.com>
+
 
 
 参考资料
@@ -35,6 +35,9 @@ https://www.cnblogs.com/aidixie/p/10026590.html
 Vue使用echarts-wordcloud生成词云
 https://blog.csdn.net/a787373009/article/details/102615282
 
+李德瑶 <598435803@qq.com>
+
+```
 E:\FCN>npm install mockjs
 npm WARN tar ENOENT: no such file or directory, rename 'E:\FCN\node_modules\.sta
 ging\is-buffer-b7c0741d\package.json' -> 'E:\FCN\node_modules\.staging\is-buffer
@@ -124,7 +127,7 @@ npm ERR!     C:\Users\THTF\AppData\Roaming\npm-cache\_logs\2021-05-22T08_37_13_4
 √ Run 0 scripts
 √ All packages installed (2 packages installed from npm registry, used 1s(netwo
 rk 1s), speed 583.19kB/s, json 2(8.07kB), tarball 738.42kB)'E:\FCN>''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
-
+```
 
 <link rel="icon" href="<%= BASE_URL %>favicon.ico">  
 标识引用当前根目录下的favicon.ico这个图标  
