--- a/part0-personalDoc/天福山起义.md
+++ b/part0-personalDoc/天福山起义.md
@@ -25,6 +25,8 @@ https://baike.baidu.com/item/%E5%A4%A9%E7%A6%8F%E5%B1%B1%E8%B5%B7%E4%B9%89/19302
 https://haokan.baidu.com/v?pd=wisenatural&vid=9836503417997881884
 
 
-1937年12月24日，在中共山东省委的直接领导下，中共胶东特委在文登天福山举行武装起义，创建了山东人民抗日救国军第三军，开展了艰苦卓绝的敌后抗日游击战争。解放战争时期，这支源于天福山的胶东子弟兵听党指挥，南征北战，屡建奇功，为中国人民的解放事业做出了历史性贡献。天福山起义开启了红色胶东时代，是红色胶东的历史源头。
+1937年12月24日，在中共山东省委的直接领导下，中共胶东特委在文登天福山举行武装起义，创建了山东人民抗日救国军第三军，开展了艰苦卓绝的敌后抗日游击战争。解放战争时期，这支源于天福山的胶东子弟兵听党指挥，南征北战，屡建奇功，为中国人民的解放事业做出了历史性贡献。
 
-天福山起义的意义重大，打响了胶东抗战的第一枪
+天福山起义开启了红色胶东时代，是红色胶东的历史源头。
+
+天福山起义的意义重大，打响了胶东抗战的第一枪.
