2023-03-27:modify:整理之前未处理文档中url进入notion

--- a/part1-git/1.使用git的问题.md
+++ b/part1-git/1.使用git的问题.md
@@ -8,3 +8,28 @@ hint: 'git pull ...') before pushing again.
 hint: See the 'Note about fast-forwards' in 'git push --help' for details.
 
 ```
+
+# gitLearn
+练习git软件使用的仓库
+
+#### git本地仓库
+       | git add  |        |git commit -m|            
+
+|工作区|   -------->  |缓存区|    -------->      |本地仓库 |
+
+#### git远程仓库
+github网站，有一个服务器，认为在网络中的电脑。
+
+## Git是什么？  
+官网地址：https://git-scm.com/
+###### 官网描述
+>Git is a free and open source **distributed version control system** designed to handle everything from small to very large projects with speed and efficiency.  
+Git is easy to learn and has a tiny footprint with lightning fast performance. It outclasses SCM tools[<sup>1</sup>](#refer-anchor) like Subversion, CVS, Perforce, and ClearCase with features like cheap local branching, convenient staging areas, and multiple workflows.
+
+>Git是一个免费的、开源的分布式的**版本控制系统**，旨在快速高效地处理从小型到大型项目的所有内容。  
+Git 易于学习， 占地面积小，具有闪电般的快速性能。它具有和Subversion，CVS，Perforce和ClearCase之类的一样的SCM工具，具有廉价的本地分支，方便的暂存区域和多个工作流等功能。
+
+<div id="refer-anchor"></div>  
+
+#### 备注  
+[1] SCM是一种标识、组织和控制修改的技术，目的是使错误降为最小并最有效地提高生产效率。 
